--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Amazing Price</title>
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="flex.css">
-    <link rel="stylesheet" href="id.css">
-    <link rel="stylesheet" href="class.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/flex.css">
+    <link rel="stylesheet" href="css/id.css">
+    <link rel="stylesheet" href="css/class.css">
 </head>
 <body>
     <header>
@@ -25,8 +25,12 @@
     <div class="border"></div>
     <main>
         <div id="flex-main">
-
-            <p>test</p>
+            <div id="container-main1">
+                <img src="img/20210420_155225-1.jpg">
+            </div>
+            <div id="container-main2">
+                <img src="img/20210420_155409-1.jpg">
+            </div>
         </div>
     </main>
     <div class="border"></div>
