--- a/index.html
+++ b/index.html
@@ -26,10 +26,24 @@
     <main>
         <div id="flex-main">
             <div id="container-main1">
-                <img src="img/20210420_155225-1.jpg">
+                <div class="img-container">
+                    <img src="img/20210420_155409-1.jpg" alt="img1">
+                    <p class="text" >Quetard observant son lapin comme un boucher</p>
+                </div>
+                <div class="img-container">
+                    <img src="img/20210420_155225-1.jpg" alt="img2">
+                    <p class="text" >Quetard observant son lapin comme un boucher</p>
+                </div>
             </div>
             <div id="container-main2">
-                <img src="img/20210420_155409-1.jpg">
+                <div class="img-container">
+                    <img src="img/20210420_155225-1.jpg" alt="img3">
+                    <div class="text">Quetard caressant son lapin délicatement</div>
+                </div>
+                <div class="img-container">
+                    <img src="img/20210420_155225-1.jpg" alt="img4">
+                    <div class="text">Quetard caressant son lapin délicatement</div>
+                </div>
             </div>
         </div>
     </main>
